[gd_scene load_steps=40 format=2]

[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/button_disabled.png" type="Texture" id=1]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/attack_button.png" type="Texture" id=2]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/use_button.png" type="Texture" id=3]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/attack_focus.png" type="Texture" id=4]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/arrow_disabled.png" type="Texture" id=5]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/bag_pressed.png" type="Texture" id=6]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/background.png" type="Texture" id=7]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/attack_pressed.png" type="Texture" id=8]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/arrow_pressed.png" type="Texture" id=9]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/arrow_focused.png" type="Texture" id=10]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/use_pressed.png" type="Texture" id=11]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/bag_button.png" type="Texture" id=12]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/bag_focused.png" type="Texture" id=13]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/numbers/numbers_sheet1.png" type="Texture" id=14]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/use_focused.png" type="Texture" id=15]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/arrow_Button.png" type="Texture" id=16]
[ext_resource path="res://GameScripts/Num.gd" type="Script" id=17]
[ext_resource path="res://GameScripts/Score.gd" type="Script" id=18]
[ext_resource path="res://GameScripts/Player.tscn" type="PackedScene" id=19]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/drop_button.png" type="Texture" id=20]
[ext_resource path="res://GameScripts/StartMenu.tscn" type="PackedScene" id=21]
[ext_resource path="res://GameScripts/World.gd" type="Script" id=22]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/drop_pressed.png" type="Texture" id=23]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Items/item_highlight.png" type="Texture" id=24]
[ext_resource path="res://GameScripts/Bag.gd" type="Script" id=25]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Weapons/highlight.png" type="Texture" id=26]
[ext_resource path="res://GameScripts/AttackTimer.gd" type="Script" id=27]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/die_pressed.png" type="Texture" id=28]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/live_pressed.png" type="Texture" id=29]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Sounds/cave_noises.wav" type="AudioStream" id=30]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Sounds/fire_crackle.wav" type="AudioStream" id=31]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/live.png" type="Texture" id=32]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/live_disabed.png" type="Texture" id=33]
[ext_resource path="res://Font.tres" type="DynamicFont" id=34]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/die_button.png" type="Texture" id=35]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/die_disabled.png" type="Texture" id=36]
[ext_resource path="res://Items/Map.tscn" type="PackedScene" id=37]

[sub_resource type="Animation" id=1]
resource_name = "num"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Num:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Num2:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Num3:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.101961, 0.0784314, 0.0745098, 0.862745 ), Color( 0.101961, 0.0784314, 0.0745098, 1 ), Color( 0.101961, 0.0784314, 0.0745098, 0.862745 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/Weapons:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background/Control:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background/Weapons:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="World" type="Node2D"]
pause_mode = 1
script = ExtResource( 22 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 32, 32 )
z_index = -10
texture = ExtResource( 7 )

[node name="UI" type="Control" parent="."]
pause_mode = 2
margin_left = 4.0
margin_top = 39.0
margin_right = 41.0
margin_bottom = 60.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpArrow" type="TextureButton" parent="UI"]
margin_left = 15.0
margin_right = 22.0
margin_bottom = 4.0
focus_mode = 0
disabled = true
enabled_focus_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArrow" type="TextureButton" parent="UI"]
margin_left = 27.0
margin_top = 1.0
margin_right = 34.0
margin_bottom = 5.0
rect_rotation = 90.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftArrow" type="TextureButton" parent="UI"]
margin_left = 10.0
margin_top = 8.0
margin_right = 17.0
margin_bottom = 12.0
rect_rotation = -90.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownArrow" type="TextureButton" parent="UI"]
margin_left = 22.0
margin_top = 9.0
margin_right = 29.0
margin_bottom = 13.0
rect_rotation = -180.0
focus_mode = 0
disabled = true
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButton" type="TextureButton" parent="UI"]
anchor_left = 0.027027
anchor_top = 0.666667
anchor_right = 0.027027
anchor_bottom = 0.666667
margin_left = 1.0
margin_top = -3.0
margin_right = 10.0
margin_bottom = 6.0
focus_mode = 0
disabled = true
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UseButton" type="TextureButton" parent="UI"]
anchor_left = 0.027027
anchor_top = 0.666667
anchor_right = 0.027027
anchor_bottom = 0.666667
margin_left = 13.0
margin_top = -3.0
margin_right = 22.0
margin_bottom = 6.0
focus_mode = 0
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 11 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BagButton" type="TextureButton" parent="UI"]
anchor_left = 0.027027
anchor_top = 0.666667
anchor_right = 0.027027
anchor_bottom = 0.666667
margin_left = 25.0
margin_top = -3.0
margin_right = 34.0
margin_bottom = 6.0
focus_mode = 0
disabled = true
toggle_mode = true
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropButton" type="TextureButton" parent="UI"]
visible = false
anchor_left = 0.027027
anchor_top = 0.666667
anchor_right = 0.027027
anchor_bottom = 0.666667
margin_left = 1.0
margin_top = -3.00001
margin_right = 10.0
margin_bottom = 5.99999
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 23 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackTimer" type="Timer" parent="UI"]
wait_time = 1.2
one_shot = true
script = ExtResource( 27 )

[node name="Score" type="Control" parent="."]
pause_mode = 2
margin_left = 44.0
margin_top = 23.0
margin_right = 60.0
margin_bottom = 36.0
mouse_filter = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "This is the dumbest thing I've ever done but I could not be more proud, I HATE font making softwares now."
}

[node name="Num" type="TextureRect" parent="Score"]
margin_right = 5.0
margin_bottom = 13.0
mouse_filter = 2
texture = ExtResource( 14 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num2" type="TextureRect" parent="Score"]
margin_left = 5.0
margin_right = 10.0
margin_bottom = 13.0
mouse_filter = 2
texture = ExtResource( 14 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num3" type="TextureRect" parent="Score"]
margin_left = 10.0
margin_right = 15.0
margin_bottom = 13.0
mouse_filter = 2
texture = ExtResource( 14 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Score"]
anims/num = SubResource( 1 )

[node name="CurrentWeapon" type="Sprite" parent="."]
position = Vector2( 52, 49 )

[node name="Player" parent="." instance=ExtResource( 19 )]
pause_mode = 2

[node name="Rooms" type="Node2D" parent="."]

[node name="StartMenu" parent="Rooms" instance=ExtResource( 21 )]
first_room = "res://Rooms/Floor1/Room0.tscn"

[node name="Bag" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Bag"]
margin_left = 4.0
margin_top = 5.0
margin_right = 41.0
margin_bottom = 35.0
color = Color( 0.101961, 0.0784314, 0.0745098, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Bag/Background"]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Control" parent="Bag/Background/Control"]
margin_left = 6.0
margin_top = 8.0
margin_right = 6.0
margin_bottom = 8.0

[node name="Map" parent="Bag/Background/Control/1" instance=ExtResource( 37 )]

[node name="2" type="Control" parent="Bag/Background/Control"]
margin_left = 18.0
margin_top = 8.0
margin_right = 18.0
margin_bottom = 8.0

[node name="3" type="Control" parent="Bag/Background/Control"]
margin_left = 30.0
margin_top = 8.0
margin_right = 30.0
margin_bottom = 8.0

[node name="4" type="Control" parent="Bag/Background/Control"]
margin_left = 6.0
margin_top = 20.0
margin_right = 6.0
margin_bottom = 20.0

[node name="5" type="Control" parent="Bag/Background/Control"]
margin_left = 18.0
margin_top = 20.0
margin_right = 18.0
margin_bottom = 20.0

[node name="6" type="Control" parent="Bag/Background/Control"]
margin_left = 30.0
margin_top = 20.0
margin_right = 30.0
margin_bottom = 20.0

[node name="Highlight" type="TextureRect" parent="Bag/Background/Control"]
modulate = Color( 1, 1, 1, 0.776471 )
margin_top = 2.0
margin_right = 12.0
margin_bottom = 14.0
texture = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="Bag/Background/Control"]
modulate = Color( 1, 1, 1, 0.509804 )
margin_left = 36.0
margin_top = 11.0
margin_right = 43.0
margin_bottom = 15.0
rect_rotation = 90.0
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapons" type="Control" parent="Bag/Background"]
visible = false
modulate = Color( 1, 1, 1, 0.862745 )
rect_pivot_offset = Vector2( 35, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Control" parent="Bag/Background/Weapons"]
margin_left = 6.0
margin_top = 12.0
margin_right = 6.0
margin_bottom = 12.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Control" parent="Bag/Background/Weapons"]
margin_left = 18.0
margin_top = 12.0
margin_right = 18.0
margin_bottom = 12.0
mouse_filter = 2

[node name="3" type="Control" parent="Bag/Background/Weapons"]
margin_left = 30.0
margin_top = 12.0
margin_right = 30.0
margin_bottom = 12.0
mouse_filter = 2

[node name="Highlight" type="TextureRect" parent="Bag/Background/Weapons"]
modulate = Color( 1, 1, 1, 0.776471 )
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow2" type="TextureRect" parent="Bag/Background/Weapons"]
modulate = Color( 1, 1, 1, 0.254902 )
margin_top = 18.0
margin_right = 7.0
margin_bottom = 22.0
rect_rotation = -90.0
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventorySwitcher" type="AnimationPlayer" parent="Bag"]
anims/change = SubResource( 2 )

[node name="Gameover" type="Label" parent="."]
pause_mode = 2
visible = false
margin_left = 5.0
margin_top = 6.0
margin_right = 40.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 34 )
custom_colors/font_color = Color( 0.984314, 1, 0.878431, 1 )
text = "YOU' VE
FALLEN"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Gameover"]
show_behind_parent = true
margin_left = -1.0
margin_top = -2.0
margin_right = 36.0
margin_bottom = 30.0
color = Color( 0.101961, 0.0784314, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LiveButton" type="TextureButton" parent="Gameover"]
margin_left = 5.0
margin_top = 23.0
margin_right = 18.0
margin_bottom = 28.0
focus_mode = 0
mouse_filter = 2
toggle_mode = true
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 29 )
texture_disabled = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DieButton" type="TextureButton" parent="Gameover"]
margin_left = 21.0
margin_top = 23.0
margin_right = 34.0
margin_bottom = 28.0
focus_mode = 0
mouse_filter = 2
disabled = true
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 28 )
texture_disabled = ExtResource( 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Gameover"]
margin_left = 3.0
margin_top = 15.0
margin_right = 32.0
margin_bottom = 19.0
rect_min_size = Vector2( 29, 4 )
custom_fonts/font = ExtResource( 34 )
custom_colors/font_color = Color( 0.584314, 0.780392, 0.372549, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2

[node name="BackgroundNoise" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 30 )
autoplay = true

[node name="FireCrackle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )
volume_db = -5.0

[node name="ButtonClicker" type="AudioStreamPlayer" parent="."]
pause_mode = 2
volume_db = -5.0

[node name="EffectPosition" type="Node2D" parent="."]
position = Vector2( 23, 16 )

[connection signal="pressed" from="UI/UpArrow" to="." method="_on_UpArrow_pressed"]
[connection signal="pressed" from="UI/RightArrow" to="." method="_on_RightArrow_pressed"]
[connection signal="pressed" from="UI/LeftArrow" to="." method="_on_LeftArrow_pressed"]
[connection signal="pressed" from="UI/DownArrow" to="." method="_on_DownArrow_pressed"]
[connection signal="toggled" from="UI/AttackButton" to="." method="_on_AttackButton_toggled"]
[connection signal="toggled" from="UI/UseButton" to="." method="_on_UseButton_toggled"]
[connection signal="toggled" from="UI/BagButton" to="." method="_on_BagButton_toggled"]
[connection signal="pressed" from="UI/DropButton" to="." method="_on_DropButton_pressed"]
[connection signal="timeout" from="UI/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="visibility_changed" from="Gameover" to="." method="_on_Gameover_visibility_changed"]
[connection signal="pressed" from="Gameover/LiveButton" to="." method="_on_LiveButton_pressed"]
[connection signal="pressed" from="Gameover/DieButton" to="." method="_on_DieButton_pressed"]
